--- a/presskit/index.html
+++ b/presskit/index.html
@@ -14,7 +14,7 @@
 			<div class="uk-grid">
 				<div id="navigation" class="uk-width-medium-1-4">
 					<h1 class="nav-header">Red House Games</h1>
-					<a class="nav-header" href="https://redhousegames.github.io/TiltShift">press kit</a>
+					<a class="nav-header" href="../">press kit</a>
 					<ul class="uk-nav uk-nav-side">					<li><a href="#factsheet">Factsheet</a></li>
 						<li><a href="#description">Description</a></li>
 						<li><a href="#projects">Projects</a></li>
@@ -35,7 +35,7 @@
 							</p>
 							<p>
 								<strong>Website:</strong><br/>
-								<a href="https://redhousegames.github.io/TiltShift">redhousegames.github.io/TiltShift</a>
+								<a href="../">redhousegames.net</a>
 							</p>
 							<p>
 							<strong>Releases:</strong><br /><a href="tiltShift/index.html">TiltShift</a><br />							</p>
@@ -52,9 +52,9 @@
 
 					<hr>
 
-					<h2 id="trailers">Videos</h2><p>There are currently no videos available for Red House Games. Check back later for more or <a href="#contact">contact us</a> for specific requests!</p>					<hr>
+					<h2 id="trailers">Videos</h2><p>There are currently no videos available for Red House Games. Check back later for more or <a href="mailto:press@redhousegames.net">contact us</a> for specific requests!</p>					<hr>
 
-					<h2 id="images">Images</h2><div class="uk-grid images"></div>					<p class="images-text">There are no images available for Red House Games, but to request one please <a href="#contact">contact us</a>!</p>
+					<h2 id="images">Images</h2><div class="uk-grid images"></div>					<p class="images-text">There are no images available for Red House Games, but to request one please <a href="mailto:press@redhousegames.net">contact us</a>!</p>
 
 					<hr>
 
