--- a/presskit/tiltShift/index.html
+++ b/presskit/tiltShift/index.html
@@ -43,10 +43,10 @@
 							</p>
 
 							<p>
-								<strong>Platforms:</strong><br /><a href="https://redhousegames.github.io/TiltShift/index.html#Demo">PC / Mac / Linux</a><br/><a href="http://">iOS</a><br/><a href="http://">Android</a><br/>							</p>
+								<strong>Platforms:</strong><br /><a href="../../TiltShift/index.html#Demo">PC / Mac / Linux</a><br/><a href="#">iOS</a><br/><a href="#">Android</a><br/>							</p>
 							<p>
 								<strong>Website:</strong><br/>
-								<a href="https://redhousegames.github.io/TiltShift">redhousegames.github.io/TiltShift</a>
+								<a href="../../TiltShift">redhousegames.net/TiltShift</a>
 							</p>
 						</div>
 						<div class="uk-width-medium-4-6">
@@ -61,11 +61,11 @@
 
 					<hr>
 
-					<h2 id="trailers">Videos</h2><p>There are currently no trailers available for TiltShift. Check back later for more or <a href="#contact">contact us</a> for specific requests!</p>					<hr>
+					<h2 id="trailers">Videos</h2><p>There are currently no trailers available for TiltShift. Check back later for more or <a href="mailto:press@redhousegames.net">contact us</a> for specific requests!</p>					<hr>
 
-					<h2 id="images">Images</h2><div class="uk-grid images"><div class="uk-width-medium-1-2"><a href="../../images/Tilt_Shift_3x3.png"><img src="../../images/Tilt_Shift_3x3.png" alt="Tilt_Shift_3x3.png" /></a></div><div class="uk-width-medium-1-2"><a href="../../images/Tilt_Shift_4x4_blue.png"><img src="../../images/Tilt_Shift_4x4_blue.png" alt="Tilt_Shift_4x4_blue.png" /></a></div><div class="uk-width-medium-1-2"><a href="../../images/Tilt_Shift_4x4_red.png"><img src="../../images/Tilt_Shift_4x4_red.png" alt="Tilt_Shift_4x4_red.png" /></a></div><div class="uk-width-medium-1-2"><a href="../../images/Tilt_Shift_5x5_blue.png"><img src="../../images/Tilt_Shift_5x5_blue.png" alt="Tilt_Shift_5x5_blue.png" /></a></div><div class="uk-width-medium-1-2"><a href="../../images/Tilt_Shift_5x5_red.png"><img src="../../images/Tilt_Shift_5x5_red.png" alt="Tilt_Shift_5x5_red.png" /></a></div><div class="uk-width-medium-1-2"><a href="../../images/Tilt_shift_Level_Select.png"><img src="../../images/Tilt_shift_Level_Select.png" alt="Tilt_shift_Level_Select.png" /></a></div><div class="uk-width-medium-1-2"><a href="../../images/Tilt_shift_Title.png"><img src="../../images/Tilt_shift_Title.png" alt="Tilt_shift_Title.png" /></a></div><div class="uk-width-medium-1-2"><a href="images/tiltshift.gif"><img src="images/tiltshift.gif" alt="tiltshift.gif" /></a></div></div>					<hr>
+					<h2 id="images">Images</h2><div class="uk-grid images"><div class="uk-width-medium-1-2"><a href="../../TiltShift/images/Tilt_Shift_3x3.png"><img src="../../TiltShift/images/Tilt_Shift_3x3.png" alt="Tilt_Shift_3x3.png" /></a></div><div class="uk-width-medium-1-2"><a href="../../TiltShift/images/Tilt_Shift_4x4_blue.png"><img src="../../TiltShift/images/Tilt_Shift_4x4_blue.png" alt="Tilt_Shift_4x4_blue.png" /></a></div><div class="uk-width-medium-1-2"><a href="../../TiltShift/images/Tilt_Shift_4x4_red.png"><img src="../../TiltShift/images/Tilt_Shift_4x4_red.png" alt="Tilt_Shift_4x4_red.png" /></a></div><div class="uk-width-medium-1-2"><a href="../../TiltShift/images/Tilt_Shift_5x5_blue.png"><img src="../../TiltShift/images/Tilt_Shift_5x5_blue.png" alt="Tilt_Shift_5x5_blue.png" /></a></div><div class="uk-width-medium-1-2"><a href="../../TiltShift/images/Tilt_Shift_5x5_red.png"><img src="../../TiltShift/images/Tilt_Shift_5x5_red.png" alt="Tilt_Shift_5x5_red.png" /></a></div><div class="uk-width-medium-1-2"><a href="../../TiltShift/images/Tilt_shift_Level_Select.png"><img src="../../TiltShift/images/Tilt_shift_Level_Select.png" alt="Tilt_shift_Level_Select.png" /></a></div><div class="uk-width-medium-1-2"><a href="../../TiltShift/images/Tilt_shift_Title.png"><img src="../../TiltShift/images/Tilt_shift_Title.png" alt="Tilt_shift_Title.png" /></a></div><div class="uk-width-medium-1-2"><a href="images/tiltshift.gif"><img src="images/tiltshift.gif" alt="tiltshift.gif" /></a></div></div>					<hr>
 
-					<h2 id="logo">Logo &amp; Icon</h2><div class="uk-grid images"><div class="uk-width-medium-1-2"><a href="images/logo.png"><img src="images/logo.png" alt="logo" /></a></div></div><hr><h2 id="preview">Request Press Copy</h2><p>To request a press key please <a href="#contact">contact us</a>! In the meantime check out the <a href="https://redhousegames.github.io/TiltShift/index.html#Demo">demo</a>.</p><hr><h2 id="monetize">Monetization Permission</h2><p>Red House Games allows for the contents of TiltShift to be published through video broadcasting services for any commercial or non-commercial purposes. Monetization of videos created containing assets from TiltShift is legally &amp; explicitly allowed by Red House Games. This permission can be found in writing at <a href="https://redhousegames.github.io/TiltShift/presskit/tiltShift/index.html#monetize">https://redhousegames.github.io/TiltShift/presskit/tiltShift/index.html#monetize</a>.</p><hr>
+					<h2 id="logo">Logo &amp; Icon</h2><div class="uk-grid images"><div class="uk-width-medium-1-2"><a href="images/logo.png"><img src="images/logo.png" alt="logo" /></a></div></div><hr><h2 id="preview">Request Press Copy</h2><p>To request a press key please <a href="mailto:press@redhousegames.net">contact us</a>! In the meantime check out the <a href="https://redhousegames.github.io/TiltShift/index.html#Demo">demo</a>.</p><hr><h2 id="monetize">Monetization Permission</h2><p>Red House Games allows for the contents of TiltShift to be published through video broadcasting services for any commercial or non-commercial purposes. Monetization of videos created containing assets from TiltShift is legally &amp; explicitly allowed by Red House Games. This permission can be found in writing at <a href="https://redhousegames.net/presskit/tiltShift/index.html#monetize">https://redhousegames.net/presskit/tiltShift/index.html#monetize</a>.</p><hr>
 
 					<h2 id="about">About Red House Games</h2>
 					<p>
@@ -90,7 +90,7 @@
 
 					<hr>
 
-					<p><a href="https://dopresskit.com/">presskit()</a> by Rami Ismail (<a href="https://www.vlambeer.com/">Vlambeer</a>) - also thanks to <a href="sheet.php?p=credits">these fine folks</a></p>
+					<p><a href="https://dopresskit.com/">presskit()</a> by Rami Ismail (<a href="https://www.vlambeer.com/">Vlambeer</a>)</p>
 				</div>
 			</div>
 		</div>
