--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                     <img class="logo" src="images/rhg_logo.png">
                 </a>
                 <nav class="nav-menu w-nav-menu" role="navigation">
-                    <a class="nav-link w-nav-link" href="/tour">Our Game:&nbsp;<strong>TiltShift</strong></a>
-                    <a class="nav-link w-nav-link" href="/gallery"><strong>PressKit</strong></a>
-                    <a class="nav-link w-nav-link" href="/contact"><strong>Contact</strong></a>
+                    <a class="nav-link w-nav-link" href="TiltShift/">Our Game:&nbsp;<strong>TiltShift</strong></a>
+                    <a class="nav-link w-nav-link" href="presskit/tiltShift/index.html"><strong>PressKit</strong></a>
+                    <a class="nav-link w-nav-link" href="mailto:hello@redhousegames.net"><strong>Contact</strong></a>
                 </nav>
                 <div class="menu-button w-clearfix w-nav-button">
                     <div class="menu-text">MENU</div>
@@ -45,12 +45,22 @@
         <div class="hero-container w-container">
             <div class="hero-subtitle">We Are releasing our new Game</div>
             <h1 class="hero-heading">TiltShift</h1>
-            <a class="big button w-button" href="/music">Check it out</a>
+            <a class="big button w-button" href="TiltShift/">Check it out</a>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
     <script src="js/webflow.js" type="text/javascript"></script>
     <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-41085222-2', 'auto');
+    ga('send', 'pageview');
+
+    </script>
 </body>
 
 </html>
