--- a/presskit/index.html
+++ b/presskit/index.html
@@ -52,9 +52,9 @@
 
 					<hr>
 
-					<h2 id="trailers">Videos</h2><p>There are currently no videos available for Red House Games. Check back later for more or <a href="mailto:press@redhousegames.net">contact us</a> for specific requests!</p>					<hr>
+					<h2 id="trailers">Videos</h2><p>There are currently no videos available for Red House Games. Check back later for more or <a href="mailto:press@redhousegames.net?Subject=More%20Videos%20of%20Red%20House%20Games">contact us</a> for specific requests!</p>					<hr>
 
-					<h2 id="images">Images</h2><div class="uk-grid images"></div>					<p class="images-text">There are no images available for Red House Games, but to request one please <a href="mailto:press@redhousegames.net">contact us</a>!</p>
+					<h2 id="images">Images</h2><div class="uk-grid images"></div>					<p class="images-text">There are no images available for Red House Games, but to request one please <a href="mailto:press@redhousegames.net?Subject=More%20Pictures%20of%20Red%20House%20Games">contact us</a>!</p>
 
 					<hr>
 
