presskit link fix

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </a>
                 <nav class="nav-menu w-nav-menu" role="navigation">
                     <a class="nav-link w-nav-link" href="TiltShift/">Our Game:&nbsp;<strong>TiltShift</strong></a>
-                    <a class="nav-link w-nav-link" href="presskit/tiltShift/index.html"><strong>PressKit</strong></a>
+                    <a class="nav-link w-nav-link" href="presskit/index.html"><strong>PressKit</strong></a>
                     <a class="nav-link w-nav-link" href="mailto:hello@redhousegames.net?Subject=More%20About%20Red%20House%20Games"><strong>Contact</strong></a>
                 </nav>
                 <div class="menu-button w-clearfix w-nav-button">
