Preparing to learn this to prepare to add Sprout shit

--- a/presskit/index.html
+++ b/presskit/index.html
@@ -46,7 +46,7 @@
 		Red House Games is an indie game studio. We make games we love in that red house down the street.
 	</p>
 							<h2 id="projects">Projects</h2>
-							<ul><li><a href="tiltShift/index.html">TiltShift</a></li>							</ul>
+							<!-- <ul><li><a href="tiltShift/index.html">TiltShift</a></li> -->							</ul>
 						</div>
 					</div>
 
