--- a/presskit/tiltShift/index.html
+++ b/presskit/tiltShift/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<title>PressKit - TiltShift</title>
-		<meta name="description" content="TiltShift is a logic-cube game that challenges your puzzle solving ability with a number of quirky blocks. Tron-inspired and bright with beautiful lighting, you will utilize a unique spatial manipulation mechanic to make upside-down blocks behave as if they were right-side up. Learn to see the 3D puzzle through multiple perspectives as you tilt and shift obstacles to solve seemingly impossible puzzles.">
+		<meta name="description" content="TiltShift is a game that pushes your puzzle solving ability and spatial reasoning to their limits. Tron-inspired and bright with beautiful lighting, you will utilize a unique spatial manipulation mechanic to make upside-down blocks behave as if they were right-side up. Learn to see the 3D puzzle through multiple perspectives as you tilt and shift obstacles to solve seemingly impossible puzzles.">
 	  <meta property="og:description" content="Explore a logic-cube that challenges your puzzle solving ability. TiltShift is Tron-inspired and bright with beautiful lighting. You will utilize a unique spatial manipulation mechanic to make upside-down blocks behave as if they were right-side up. Learn to see the 3D puzzle through multiple perspectives as you tilt and shift obstacles to solve seemingly impossible puzzles.">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/uikit/1.2.0/css/uikit.gradient.min.css" rel="stylesheet" type="text/css">
 		<link href="../style.css" rel="stylesheet" type="text/css">
@@ -21,7 +21,7 @@
 					<a class="nav-header" href="../index.html" target="_self">press kit</a></strong>
 					<ul class="uk-nav uk-nav-side">					<li><a href="#factsheet">Factsheet</a></li>
 						<li><a href="#description">Description</a></li>
-						<li><a href="#projects">Projects</a></li>
+						<!-- <li><a href="#projects">Projects</a></li> -->
 						<li><a href="#trailers">Videos</a></li>
 						<li><a href="#images">Images</a></li>
 						<li><a href="#logo">Logo &amp; Icon</a></li><li><a href="#monetize">Monetization Permission</a></li>
