--- a/presskit/tiltShift/index.html
+++ b/presskit/tiltShift/index.html
@@ -21,7 +21,7 @@
 					<a class="nav-header" href="../index.html" target="_self">press kit</a></strong>
 					<ul class="uk-nav uk-nav-side">					<li><a href="#factsheet">Factsheet</a></li>
 						<li><a href="#description">Description</a></li>
-						<!-- <li><a href="#projects">Projects</a></li> -->
+						<li><a href="#projects">Projects</a></li>
 						<li><a href="#trailers">Videos</a></li>
 						<li><a href="#images">Images</a></li>
 						<li><a href="#logo">Logo &amp; Icon</a></li><li><a href="#monetize">Monetization Permission</a></li>
@@ -52,7 +52,7 @@
 						<div class="uk-width-medium-4-6">
 							<h2 id="description">Description</h2>
 							<p>
-	TiltShift is a logic-cube game that challenges your puzzle solving ability with a number of quirky blocks. Tron-inspired and bright with beautiful lighting, you will utilize a one-of- a-kind rotation mechanic to navigate the face of a three dimensional cube. Learn to see the 3D puzzle through multiple perspectives and think from steps ahead to raise your skills and solve seemingly impossible puzzles.
+	TiltShift is a game that pushes your puzzle solving ability and spatial reasoning to their limits. Tron-inspired and bright with beautiful lighting, you will utilize a one-of- a-kind rotation mechanic to navigate the face of a three dimensional cube. Learn to see the 3D puzzle through multiple perspectives and think from steps ahead to raise your skills and solve seemingly impossible puzzles.
 	</p>
 						<h2>Features</h2>
 							<ul><li>A unique spatial manipulation mechanic to make arrow, pusher, toggle, and four-way blocks behave as tools rather than obstacles.</li><li>Beautiful lighting and concentration inducing music fill up a futuristic space.</li><li>Easy and intuitive puzzle navigation using swipes and taps.</li><li>Over 90 unique puzzles to solve.</li>							</ul>
@@ -71,13 +71,13 @@
 					<p>
 						<strong>Boilerplate</strong><br/>
 
-		Red House Games is an indie game studio. We make games we love in the red house down the street.
+		RedHouse Games is an indie game studio. Making games we love in the red house down the street.
 
 					</p>
 
 					<p>
 						<strong>More information</strong><br/>
-						More information on Red House Games, our logo & relevant media are available <a href="../index.html">here</a>.
+						More information on RedHouse Games, our logo & relevant media are available <a href="../index.html">here</a>.
 					</p>
 
 					<hr>
