--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
             </div>
         </div>
         <div class="hero-container w-container">
-            <div class="hero-subtitle">We Are releasing our new Game</div>
+            <!-- <div class="hero-subtitle">We Are releasing our new Game</div>
             <h1 class="hero-heading">TiltShift</h1>
-            <a class="big button w-button" href="TiltShift/">Check it out</a>
+            <a class="big button w-button" href="TiltShift/">Check it out</a> -->
+            <img class= "logo src="images/SproutLogo_512.png">
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
