--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
             <!-- <div class="hero-subtitle">We Are releasing our new Game</div>
             <h1 class="hero-heading">TiltShift</h1>
             <a class="big button w-button" href="TiltShift/">Check it out</a> -->
-            <img class="logo" src="images/SproutLogo_1k.png" style="width:300px;height:300px;">
+            <img class="logo" src="images/SproutLogo_512.png" style="width:256px;height:256px;">
         </div>
+    </div>
+    <div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
     <script src="js/webflow.js" type="text/javascript"></script>
