--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h1 class="hero-heading">TiltShift</h1>
             <a class="big button w-button" href="TiltShift/">Check it out</a> -->
             <img class="logo" src="images/SproutLogo_512.png" style="width:256px;height:256px;">
-            <div class="hero-subtitle">Stay Tuned</div>
+            <div class="hero-heading">Stay Tuned</div>
         </div>
     </div>
     <div>
