--- a/index.html
+++ b/index.html
@@ -47,10 +47,8 @@
             <h1 class="hero-heading">TiltShift</h1>
             <a class="big button w-button" href="TiltShift/">Check it out</a> -->
             <img class="logo" src="images/SproutLogo_512.png" style="width:256px;height:256px;">
-            <div class="hero-heading">Stay Tuned</div>
+            <h1 class="hero-heading">Stay Tuned</h1>
         </div>
-    </div>
-    <div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
     <script src="js/webflow.js" type="text/javascript"></script>
