--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <img class="logo" src="images/rhg_logo.png">
                 </a>
                 <nav class="nav-menu w-nav-menu" role="navigation">
-                    <a class="nav-link w-nav-link" href="TiltShift/">Our Game:&nbsp;<strong>TiltShift</strong></a>
+                    <!--<a class="nav-link w-nav-link" href="TiltShift/">Our Game:&nbsp;<strong>TiltShift</strong></a>-->
                     <a class="nav-link w-nav-link" href="presskit/index.html"><strong>PressKit</strong></a>
                     <a class="nav-link w-nav-link" href="mailto:hello@redhousegames.net?Subject=More%20About%20Red%20House%20Games"><strong>Contact</strong></a>
                 </nav>
