--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
             <!-- <div class="hero-subtitle">We Are releasing our new Game</div>
             <h1 class="hero-heading">TiltShift</h1>
             <a class="big button w-button" href="TiltShift/">Check it out</a> -->
-            <img class="logo" src="images/SproutLogo_512.png" style="width:256px;height:256px;">
+            <a class="brand-link w-nav-brand" href="https://forums.unrealengine.com/t/sprout-foliage-creation-in-ue4-5/155261">
+                <img class="logo" src="images/SproutLogo_512.png" style="width:256px;height:256px;">
+            </a>
             <h1 class="hero-heading">Stay Tuned</h1>
         </div>
     </div>
