--- a/index.html
+++ b/index.html
@@ -46,12 +46,8 @@
             <!-- <div class="hero-subtitle">We Are releasing our new Game</div>
             <h1 class="hero-heading">TiltShift</h1>
             <a class="big button w-button" href="TiltShift/">Check it out</a> -->
-            <div class="v-container">
-                <a class="brand-link w-nav-brand" href="https://forums.unrealengine.com/t/sprout-foliage-creation-in-ue4-5/155261">
-                    <img class="logo" src="images/SproutLogo_512.png" style="width:256px;height:256px;">
-                </a>
-            </div>
-            <div class="v-container"><h1 class="hero-heading">Stay Tuned</h1></div>
+            <a class="brand-link w-nav-brand" href="https://forums.unrealengine.com/t/sprout-foliage-creation-in-ue4-5/155261"><img class="logo" src="images/SproutLogo_512.png" style="width:256px;height:256px;"></a>
+            <h1 class="hero-heading">Stay Tuned</h1></div>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
