--- a/index.html
+++ b/index.html
@@ -47,11 +47,29 @@
             <h1 class="hero-heading">TiltShift</h1>
             <a class="big button w-button" href="TiltShift/">Check it out</a> -->
             <a class="big button w-button" href="https://forums.unrealengine.com/t/sprout-foliage-creation-in-ue4-5/155261">
-                <img class="logo" src="images/SproutLogo_512.png" style="width:256px;height:256px;">
+                <img class="logo" border="0" src="images/SproutLogo_512.png" style="width:256px;height:256px;">
             </a>
             <div class ="hero-subtitle"><h1 class="hero-heading">Stay Tuned</h1></div>
         </div>
     </div>
+    <section class="cta bg-dark wf-section">
+        <div class="container-flex call-to-action w-container">
+            <h4>Stay Updated!</h4>
+            <div>Links Here</div>
+        </div>
+    </section>
+    <footer class ="section" footer wf-section>
+        <div class="footer-menu">
+            <a href="#" class="footer-brand w-inline-block">
+                <div class ="text-block"> RedHouse Games</div>
+            </a>
+            <div class ="footer-column">
+                <h5 class="footer-label">Info</h5>
+                <a  href="#" class="footer-link">About</a>
+            </div>
+        </div>
+    </footer>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
     <script src="js/webflow.js" type="text/javascript"></script>
     <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
