--- a/presskit/index.html
+++ b/presskit/index.html
@@ -13,7 +13,7 @@
 		<div class="uk-container uk-container-center">
 			<div class="uk-grid">
 				<div id="navigation" class="uk-width-medium-1-4">
-					<h1 class="nav-header">Red House Games</h1>
+					<h1 class="nav-header">RedHouse Games</h1>
 					<a class="nav-header" href="../">press kit</a>
 					<ul class="uk-nav uk-nav-side">					<li><a href="#factsheet">Factsheet</a></li>
 						<li><a href="#description">Description</a></li>
@@ -26,7 +26,7 @@
 							<h2 id="factsheet">Factsheet</h2>
 							<p>
 								<strong>Developer:</strong><br/>
-								<a href="">Red House Games</a><br/>
+								<a href="">RedHouse Games</a><br/>
 								Based in Rochester, NY
 							</p>
 							<p>
@@ -43,26 +43,32 @@
 						<div class="uk-width-medium-4-6">
 							<h2 id="description">Description</h2>
 							<p>
-		Red House Games is an indie game studio. We make games we love in that red house down the street.
+		RedHouse Games is an indie game studio. We make games we love in that red house down the street.
 	</p>
 							<h2 id="projects">Projects</h2>
-							<!-- <ul><li><a href="tiltShift/index.html">TiltShift</a></li> -->							</ul>
+							<!-- <ul><li><a href="tiltShift/index.html">TiltShift</a></li> -->
+							<ul><li><a href="Sprout/index.html">Sprout</a></li>							</ul>
+							</ul>
 						</div>
 					</div>
 
 					<hr>
 
-					<h2 id="trailers">Videos</h2><p>There are currently no videos available for Red House Games. Check back later for more or <a href="mailto:press@redhousegames.net?Subject=More%20Videos%20of%20Red%20House%20Games">contact us</a> for specific requests!</p>					<hr>
+						<h2 id="trailers">Videos</h2><p>There are currently no videos available for RedHouse Games. Check back later for more or <a href="mailto:press@redhousegames.net?Subject=More%20Videos%20of%20Red%20House%20Games">contact us</a> for specific requests!</p>					<hr>
 
-					<h2 id="images">Images</h2><div class="uk-grid images"></div>					<p class="images-text">There are no images available for Red House Games, but to request one please <a href="mailto:press@redhousegames.net?Subject=More%20Pictures%20of%20Red%20House%20Games">contact us</a>!</p>
-
+						<h2 id="images">Images</h2>
+							<div class="uk-grid images"></div>					
+							<p class="images-text">There are no images available for RedHouse Games, but to request one please <a href="mailto:press@redhousegames.net?Subject=More%20Pictures%20of%20Red%20House%20Games">contact us</a>!</p>
 					<hr>
 
 					<h2 id="logo">Logo &amp; Icon</h2><div class="uk-grid images"><div class="uk-width-medium-1-2"><a href="images/logo.png"><img src="images/logo.png" alt="logo" /></a></div></div>
 					<ul></ul><hr>					<div class="uk-grid">
 						<div class="uk-width-medium-1-2">
-							<h2 id="credits">Team &amp; Repeating Collaborators</h2><p><strong>Michael Weber</strong><br/>Designer, Developer</p>						</div>
-						<div class="uk-width-medium-1-2">					</div>
+							<h2 id="credits">Team &amp; Repeating Collaborators</h2>
+							<p><strong>Michael Weber</strong><br/>Designer, Developer</p>
+							<p><strong>Jeremy Golden</strong><br/>Writing, Animation</p>
+						</div>
+						<div class="uk-width-medium-1-2"></div>
 					</div>
 
 					<hr>
