--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!-- <div class="hero-subtitle">We Are releasing our new Game</div>
             <h1 class="hero-heading">TiltShift</h1>
             <a class="big button w-button" href="TiltShift/">Check it out</a> -->
-            <a class="big button w-button" href="https://forums.unrealengine.com/t/sprout-foliage-creation-in-ue4-5/155261">
+            <a class="brand-link w-nav-brand" href="https://forums.unrealengine.com/t/sprout-foliage-creation-in-ue4-5/155261">
                 <img class="logo" border="0" src="images/SproutLogo_512.png" style="width:256px;height:256px;">
             </a>
             <div class ="hero-subtitle"><h1 class="hero-heading">Stay Tuned</h1></div>
