--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class ="hero-subtitle"><h1 class="hero-heading">Stay Tuned</h1></div>
         </div>
     </div>
-    <section class="cta bg-dark w-col">
+    <section style="background-color:#a93a29">
         <div class="container-flex call-to-action w-container">
             <h4>Stay Updated!</h4>
             <div>Links Here</div>
