--- a/index.html
+++ b/index.html
@@ -52,13 +52,14 @@
             <div class ="hero-subtitle"><h1 class="hero-heading">Stay Tuned</h1></div>
         </div>
     </div>
-    <section style="background-color:#a93a29">
-        <div class="container-flex call-to-action w-container">
-            <h4>Stay Updated!</h4>
-            <div>Links Here</div>
-        </div>
-    </section>
-    <footer class ="section" footer wf-section>
+
+    <footer class ="section" style="background-color:#c29790">
+        <section>
+            <div class="container-flex call-to-action w-container">
+                <h4><p style="text-align:center">Stay Updated!</p></h4>
+                <p style="text-align:center">Links Here</p>
+            </div>
+        </section>
         <div class="footer-menu">
             <a href="#" class="footer-brand w-inline-block">
                 <div class ="text-block"> RedHouse Games</div>
