--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         </div>
     </div>
 
-    <footer class ="section" style="background-color:#c29790">
+    <footer class ="section" style="background-color:#413735">
         <section>
             <div class="container-flex call-to-action w-container">
-                <h4><p style="text-align:center">Stay Updated!</p></h4>
+                <h4><p style="text-align:center"><strong>Stay Updated!</strong></p></h4>
                 <p style="text-align:center">Links Here</p>
             </div>
         </section>
