--- a/presskit/index.html
+++ b/presskit/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>PressKit - Red House Games</title>
+		<title>PressKit - RedHouse Games</title>
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/uikit/1.2.0/css/uikit.gradient.min.css" rel="stylesheet" type="text/css">
 		<link href="style.css" rel="stylesheet" type="text/css">
 	</head>
@@ -15,13 +15,16 @@
 				<div id="navigation" class="uk-width-medium-1-4">
 					<h1 class="nav-header">RedHouse Games</h1>
 					<a class="nav-header" href="../">press kit</a>
-					<ul class="uk-nav uk-nav-side">					<li><a href="#factsheet">Factsheet</a></li>
+					<ul class="uk-nav uk-nav-side">					
+						<li><a href="#factsheet">Factsheet</a></li>
 						<li><a href="#description">Description</a></li>
 						<li><a href="#projects">Projects</a></li>
-						<li><a href="#logo">Logo &amp; Icon</a></li>						<li><a href="#credits">Team</a></li>
+						<li><a href="#logo">Logo &amp; Icon</a></li>					
+						<li><a href="#credits">Team</a></li>
 					</ul>
 				</div>
-				<div id="content" class="uk-width-medium-3-4"><img src="images/header.png" class="header">					<div class="uk-grid">
+				<div id="content" class="uk-width-medium-3-4"><img src="images/header.png" class="header">					
+					<div class="uk-grid">
 						<div class="uk-width-medium-2-6">
 							<h2 id="factsheet">Factsheet</h2>
 							<p>
@@ -47,7 +50,8 @@
 	</p>
 							<h2 id="projects">Projects</h2>
 							<!-- <ul><li><a href="tiltShift/index.html">TiltShift</a></li> -->
-							<ul><li><a href="Sprout/index.html">Sprout</a></li>							</ul>
+							<!-- <ul><li><a href="Sprout/index.html">Sprout</a></li> > -->
+							<ul><li><a href="https://forums.unrealengine.com/t/sprout-foliage-creation-in-ue4-5/155261">Sprout</a></li>							</ul>
 							</ul>
 						</div>
 					</div>
