--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     </div>
 
     <footer class ="section" style="background-color:#413735">
-        <section>
-            <div class="container-flex call-to-action w-container">
+        <section style="margin-top:-20px" >
+            <div>
                 <h4><p style="text-align:center"><strong>Stay Updated!</strong></p></h4>
                 <p style="text-align:center">Links Here</p>
             </div>
