--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 
-    <footer class ="section" style="background-color:#413735">
+    <footer class ="section" style="background-color:#dad1d0">
         <section style="margin-top:-20px" >
             <div>
                 <h4><p style="text-align:center"><strong>Stay Updated!</strong></p></h4>
