--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="css/webflow.css" rel="stylesheet" type="text/css">
     <link href="css/redhousegames.webflow.css" rel="stylesheet" type="text/css">
     <link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.png">
-	<link rel="apple-touch-icon" href="../../images/WebApp.png">
+    <link rel="apple-touch-icon" href="../../images/WebApp.png">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
     <script type="text/javascript">
         WebFont.load({
@@ -57,11 +57,12 @@
         </div>
     </div>
 
-    <footer class ="section" style="background-color:#dad1d0">
-        <section style="margin-top:-20px" >
+    <footer class ="section" style="background-color:#c2b9b8">
+        <section class="section-title" style="margin-top:-20px" >
             <div>
                 <h4><p style="text-align:center"><strong>Stay Updated!</strong></p></h4>
                 <p style="text-align:center">Links Here</p>
+		<!--<a class="social-link"></a> -->
             </div>
         </section>
         <div class="footer-menu">
