--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
     <link href="css/webflow.css" rel="stylesheet" type="text/css">
     <link href="css/redhousegames.webflow.css" rel="stylesheet" type="text/css">
-    <link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.png">
-    <link rel="apple-touch-icon" href="../../images/WebApp.png">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
     <script type="text/javascript">
         WebFont.load({
@@ -24,7 +22,7 @@
         });
     </script>
     <script src="js/modernizr.js" type="text/javascript"></script>
-    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png">
     <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 
