--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         });
     </script>
     <script src="js/modernizr.js" type="text/javascript"></script>
-    <link rel="shortcut icon" href="images/favicon.png">
+    <link rel="shortcut icon" href="images/RedHouse_Bean.png">
     <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 
