--- a/index.html
+++ b/index.html
@@ -58,8 +58,19 @@
     <footer class ="section" style="background-color:#c2b9b8">
         <section class="section-title" style="margin-top:-20px" >
             <div>
-                <h4><p style="text-align:center"><strong>Stay Updated!</strong></p></h4>
-                <p style="text-align:center">Links Here</p>
+                <h3><p style="text-align:center"><strong>Stay Updated!</strong></p></h3>
+                <a href="https://forums.unrealengine.com/t/sprout-foliage-creation-in-ue4-5/155261">
+			<img src="images/Epic_Icon.png">
+		</a>
+		<a href="https://twitter.com/RedHouseGames">
+			<img src="images/Twitter_Icon.png">
+		</a>
+		<a href="https://www.youtube.com/channel/UCK0j1P4eRRwfUZuyXm-HWfQ">
+			<img src="images/Youtube_Icon.png">
+		</a>
+		<a href="https://www.twitch.tv/redhousegames">
+			<img src="images/Twitch_Icon.png">
+		</a>
 		<!--<a class="social-link"></a> -->
             </div>
         </section>
