--- a/index.html
+++ b/index.html
@@ -60,22 +60,23 @@
             <div>
                 <h3><p style="text-align:center"><strong>Stay Updated!</strong></p></h3>
                 <a href="https://forums.unrealengine.com/t/sprout-foliage-creation-in-ue4-5/155261">
-			<img src="images/Epic_Icon.png">
+			<img src="images/Epic_Icon.png" target="_blank">
 		</a>
-		<a href="https://twitter.com/RedHouseGames">
-			<img src="images/Twitter_Icon.png">
+		<a href="https://twitter.com/RedHouseGames" target="_blank">
+			<img src="images/Twitter_Icon.png" border="0">
 		</a>
-		<a href="https://www.youtube.com/channel/UCK0j1P4eRRwfUZuyXm-HWfQ">
-			<img src="images/Youtube_Icon.png">
+		<a href="https://www.youtube.com/channel/UCK0j1P4eRRwfUZuyXm-HWfQ" target="_blank">
+			<img src="images/Youtube_Icon.png" border="0">
 		</a>
-		<a href="https://www.twitch.tv/redhousegames">
-			<img src="images/Twitch_Icon.png">
+		<a class="social-link" href="https://www.twitch.tv/redhousegames" target="_blank">
+			<img src="images/Twitch_Icon.png" border="0">
 		</a>
 		<!--<a class="social-link"></a> -->
             </div>
         </section>
         <div class="footer-menu">
-            <a href="#" class="footer-brand w-inline-block">
+            <!-- a href="#" class="footer-brand w-inline-block"> -->
+	    <a href="#" class="section-title">
                 <div class ="text-block"> RedHouse Games</div>
             </a>
             <div class ="footer-column">
