--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
         <section class="section-title" style="margin-top:-20px" >
             <div>
                 <h3><p style="text-align:center"><strong>Stay Updated!</strong></p></h3>
-                <a href="https://forums.unrealengine.com/t/sprout-foliage-creation-in-ue4-5/155261">
+                <a class="social-link" href="https://forums.unrealengine.com/t/sprout-foliage-creation-in-ue4-5/155261">
 			<img src="images/Epic_Icon.png" target="_blank">
 		</a>
-		<a href="https://twitter.com/RedHouseGames" target="_blank">
+		<a class="social-link" href="https://twitter.com/RedHouseGames" target="_blank">
 			<img src="images/Twitter_Icon.png" border="0">
 		</a>
-		<a href="https://www.youtube.com/channel/UCK0j1P4eRRwfUZuyXm-HWfQ" target="_blank">
+		<a class="social-link" href="https://www.youtube.com/channel/UCK0j1P4eRRwfUZuyXm-HWfQ" target="_blank">
 			<img src="images/Youtube_Icon.png" border="0">
 		</a>
 		<a class="social-link" href="https://www.twitch.tv/redhousegames" target="_blank">
