--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<a class="social-link" href="https://www.youtube.com/channel/UCK0j1P4eRRwfUZuyXm-HWfQ" target="_blank">
 			<img src="images/Youtube_Icon.png" border="0">
 		</a>
-		<a class="social-link" href="https://www.twitch.tv/redhousegames" target="_blank">
+		<a class="social-link" href="https://www.twitch.tv/redhousegames/about" target="_blank">
 			<img src="images/Twitch_Icon.png" border="0">
 		</a>
 		<!--<a class="social-link"></a> -->
