--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <footer class ="section" style="background-color:#c2b9b8">
         <section class="section-title" style="margin-top:-20px" >
             <div>
-                <h3><p style="text-align:center"><strong>Stay Updated!</strong></p></h3>
+                <h3><p style="text-align:center, margin-bottom:10px"><strong>Stay Updated</strong></p></h3>
                 <a class="social-link" href="https://forums.unrealengine.com/t/sprout-foliage-creation-in-ue4-5/155261"><img src="images/Epic_Icon.png" target="_blank"></a>
 		<a class="social-link" href="https://twitter.com/RedHouseGames" target="_blank"><img src="images/Twitter_Icon.png" border="0"></a>
 		<a class="social-link" href="https://www.youtube.com/channel/UCK0j1P4eRRwfUZuyXm-HWfQ" target="_blank"><img src="images/Youtube_Icon.png" border="0"></a>
